components/test2/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: test-application
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: test2
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eltest2
  namespace: sdouglas1
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-test2
    weight: null
status: {}
